[metadata]
name = dam_lev
version = attr: dam_lev.VERSION
author = Daniel Walker
description = Implements the Damerau–Levenshtein diff algorithm
keywords = diff
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8

[options.extras_require]
test =
    tox
    pytest
    black
    mypy
