[metadata]
name = dam_lev
version = attr: dam_lev.VERSION
author = Daniel Walker
description = Implements the Damerau–Levenshtein diff algorithm
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = diff
doc_files = README.rst
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.8

[options.extras_require]
test =
    tox
    pytest
    black
    mypy
